# Particulars

./: .gitignore  CMakeLists.txt  README.md  README.txt  TODO.txt  check_eigen.f90  diagnostics.f90  eigen.f90  force.f90  force_old.f90  integration.f90  lattice.f90  main_brute_3D.f90  main_cell_2D.f90  main_cell_3D.f90  main_cell_pack_2D.f90  main_cell_pack_3D.f90  main_cell_pack_3D_KobAnd.f90  output.txt  parameters.f90  plot.f90  plot_f03.f90  potentials.py  random_init.F90  random_init.f90  sequence.sh  sequence_density.sh  sequence_npart.sh  thermostat.f90  workflow.txt
lapack95_modules_gfort/: f77_lapack.mod  f95_lapack.mod  la_auxmod.mod  la_precision.mod
lapack95_modules_ifort/: f77_lapack.mod  f95_lapack.mod  la_auxmod.mod  la_precision.mod
